[package]
name = "otlp-stdout-kinesis-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
otlp-stdout-logs-processor.workspace = true
tokio.workspace = true
anyhow.workspace = true
lambda_runtime.workspace = true
reqwest.workspace = true
tracing.workspace = true
lambda-otel-lite.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
otlp-sigv4-client.workspace = true
otlp-stdout-span-exporter.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
serde_json.workspace = true
aws_lambda_events = { workspace = true, features = ["kinesis"] }

[dev-dependencies]
chrono.workspace = true
base64.workspace = true
flate2.workspace = true
prost.workspace = true
opentelemetry-proto.workspace = true 

[[bin]]
name = "kinesis_processor"
path = "src/main.rs"
