[package]
name = "otlp-stdout-kinesis-extension-layer"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "OpenTelemetry Lambda extension for sending otlp data to Kinesis"

[[bin]]
name = "otlp-stdout-kinesis-extension-layer-arm64"
path = "src/main.rs"

[[bin]]
name = "otlp-stdout-kinesis-extension-layer-amd64" 
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
aws-config.workspace = true
aws-sdk-kinesis.workspace = true
lambda-extension.workspace = true
uuid.workspace = true
serde_json.workspace = true
chrono.workspace = true
