[package]
name = "otlp-stdout-kinesis-extension-layer"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "OpenTelemetry Lambda extension for sending otlp data to Kinesis"

[dependencies]
tokio.workspace = true
tracing.workspace = true
aws-config.workspace = true
aws-sdk-kinesis.workspace = true
lambda-extension.workspace = true
uuid.workspace = true
serde_json.workspace = true


# Added for platform event conversion and OTLP span export
otlp-stdout-span-exporter.workspace = true
opentelemetry.workspace = true
hex.workspace = true
chrono.workspace = true
opentelemetry_sdk = { workspace = true, features = ["trace", "rt-tokio"] }
opentelemetry-proto = { workspace = true, features = ["trace"] }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
rand = { workspace = true }
lambda-otel-lite = { workspace = true }
nix = { workspace = true, features = ["fs"] }
base64.workspace = true
flate2 = { workspace = true } 
serde = { workspace = true }
anyhow.workspace = true
prost.workspace = true
