[package]
name = "benchmark-functions-rust-http"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, features = ["trace","http-proto","reqwest-blocking-client"] }
opentelemetry_sdk.workspace = true
tracing-subscriber.workspace = true
opentelemetry-aws.workspace = true


